# arkham

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  Master Architecture Doc.docx  README.md  abqiuck - build_rules_non_negotiables.md  abquick - system_contracts.md  agent_execution_build_prompt_doc.md  alembic.ini  cloudbuild.arkhamprison.yaml  cloudbuild.gateway.yaml  cloudbuild.privacy.yaml  cloudbuild.worldgraph.yaml  cloudbuild.yaml  docker-compose.yml  master_architecture_doc.md  pyproject.toml  service_specs_and_workflow_spec.md  temp copy.html  test_codebase_audit.py  test_infra_audit.py
alembic/: env.py  script.py.mako
docs/: autopitch_positioning.md  build-status-breakdown.md  cto_agent_design.md  full-deploy-checklist.md  migration_readiness_review_v1.md  migration_wave3_preflight.md  migration_wave3_readiness.sh  naming-policy.md  project-brief-and-master-todo.md  staging-smoke-incident-template.md  stelarai-domain-cutover-note.md  stelarai-final-handoff.md  stelarai-tech-agent-spec.md  stelarai-tech-build-plan.md  stelarai-tech-build-plan2.md  worldgraph-staging-smoke-2026-04-23.md  worldgraph-v1-ops-runbook.md
infra/: README.md  init-db.sql
leads/: apollo-contacts-export.csv
scripts/: check_stelarai_cutover.sh  stelarai_api_smoke.py  summarize_workflow_memory_reviews.py  workflow_memory_shadow_run.py  workflow_review_queue_handoff.py
tests/: conftest.py  test_arkham_checkpoint.py  test_auth.py  test_crm_router.py  test_digital_twin_admin_router.py  test_gateway_privacy_integration.py  test_governance_admin_router.py  test_ingestion_api.py  (+4 more)
(+211 files in other folders)
