[project]
name = "robco"
version = "0.1.0"
description = "Robco monorepo – shared Python tooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "redis>=5.0.3,<6.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "pydantic-settings>=2.3.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0,<0.4.0",
    "pytest>=8.2.0,<9.0.0",
    "alembic>=1.13.2,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.ruff]
line-length = 120
exclude = ["build", "node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "N", "B", "A", "C4", "ICN", "G", "PYI", "PT", "RUF"]
ignore = ["COM812", "ISC001"]

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = "test_*.py"
